@@ -1,61 +1,67 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.pagoda</groupId>
-    <artifactId>mongo1-parent</artifactId>
+    <groupId>com.pagoda.test</groupId>
+    <artifactId>mongoapitest-build</artifactId>
     <packaging>pom</packaging>
-    <name>mongo1-parent</name>
-    <version>1.0.0</version>
+    <name>mongoapitest-build</name>
+    <version>1.0.1</version>
     <properties>
+        <java.version>1.8</java.version>
+        <java.source.version>1.8</java.source.version>
+        <java.target.version>1.8</java.target.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
+    
+          <!-- Build args -->
+        <argline>-server -Xms256m -Xmx512m -XX:PermSize=64m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8
+            -Djava.net.preferIPv4Stack=true
+        </argline>
+        <arguments/>
+
+        <!-- Maven plugins -->
+        <!--<maven-release-plugin.version>2.5.3</maven-release-plugin.version>-->
+        <!--<jgitflow-maven-plugin.version>1.0-m5</jgitflow-maven-plugin.version>-->
+        <!--<sync-maven-plugin.version>1.0</sync-maven-plugin.version>-->
+        <!--<jacoco-maven-plugin.version>0.8.1</jacoco-maven-plugin.version>-->
 
         <!-- 跳过测试 -->
         <maven.test.skip>true</maven.test.skip>
     </properties>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.12.RELEASE</version>
+        <groupId>com.pagoda.platform</groupId>
+        <artifactId>jms-parent</artifactId>
+        <version>1.0.5</version>
         <relativePath/>
     </parent>
     <modules>
-            <module>mongo1-api</module>
-            <module>mongo1-dao</module>
-            <module>mongo1-service</module>
-            <module>mongo1-dubbo-container</module>
-            <module>mongo1-web</module>
+            <module>mongoapitest-parent</module>
+            <module>mongoapitest-api</module>
+            <module>mongoapitest-dao</module>
+            <module>mongoapitest-service</module>
+            <module>mongoapitest-dubbo-container</module>
+            <module>mongoapitest-web</module>
     </modules>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>com.pagoda</groupId>
-                <artifactId>snyc-maven-plugin</artifactId>
-                <version>1.0</version>
-            </plugin>
-            <plugin>
-                <groupId>external.atlassian.jgitflow</groupId>
-                <artifactId>jgitflow-maven-plugin</artifactId>
-                <version>1.0-m5</version>
-                <configuration>
-                    <flowInitContext>
-                        <masterBranchName>master</masterBranchName>
-                        <developBranchName>develop</developBranchName>
-                        <featureBranchPrefix>feature-</featureBranchPrefix>
-                        <releaseBranchPrefix>release-</releaseBranchPrefix>
-                        <hotfixBranchPrefix>hotfix-</hotfixBranchPrefix>
-                        <versionTagPrefix>tag-</versionTagPrefix>
-                    </flowInitContext>
-                    <!--<username>name@pagoda.com.cn</username>-->
-                    <!--<password>yourpassword</password>-->
-                </configuration>
-            </plugin>
-
-
-        </plugins>
-    </build>
-
+<!-- 配置Nexus私服地址 -->
+    <repositories>
+        <repository>
+            <id>dev-nexus</id>
+            <name>nexus</name>
+            <url>http://maven.dev.pagoda.com.cn:10008/nexus/content/groups/public</url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </snapshots>
+        </repository>
+    </repositories>
     <pluginRepositories>
         <pluginRepository>
             <id>dev-nexus</id>
